--- a/hclsliders/Manual.html
+++ b/hclsliders/Manual.html
@@ -9,8 +9,8 @@
 <h2>HCL Sliders</h2>
 <p>A docker with hue/colofulness/lightness sliders for color selection. Sliders inheriting Oklab color space is limited to the sRGB gamut. This plugin currently can only be used in sRGB and its linear color space.</p>
 <h3>Usage</h3>
-<p>Go to <strong>Settings → Dockers → HCL Sliders</strong> to activate the docker.</p>
-<p>Click on the config button at the top right corner of the docker to configure the plugin. Changes are saved upon closing the window.</p>
+<p>Go to <strong>Settings → Dockers → HCL Sliders</strong> and click the checkbox to activate the docker.</p>
+<p>Click on the config button at the top right corner of the docker to configure the plugin. Order of models can be swapped by dragging the listed item and order of channels can be swapped by dragging the tabs. Changes are saved upon closing the window.</p>
 <h3>Slider Interactions</h3>
 <p>Left Mouse Button/Pen <strong>Press</strong>: Set value for channel</p>
 <p><strong>Ctrl</strong> + Left Mouse Button/Pen <strong>Press</strong>: Snap value to interval points</p>
