--- a/hclsliders/Manual.html
+++ b/hclsliders/Manual.html
@@ -14,8 +14,8 @@
 <h3>Slider Interactions</h3>
 <p>Left Mouse Button/Pen <strong>Press</strong>: Set value for channel</p>
 <p><strong>Ctrl</strong> + Left Mouse Button/Pen <strong>Press</strong>: Snap value to interval points</p>
-<p><strong>Shift</strong> + Left Mouse Button/Pen <strong>Drag</strong>: Shift value by 0.1 precision</p>
-<p><strong>Alt</strong> + Left Mouse Button/Pen <strong>Drag</strong>: Shift value by 0.01 precision</p>
+<p><strong>Shift</strong> + Left Mouse Button/Pen <strong>Drag</strong>: Shift value by 0.1 precision (or lower for chroma)</p>
+<p><strong>Alt</strong> + Left Mouse Button/Pen <strong>Drag</strong>: Shift value by 0.01 precision (or lower for chroma)</p>
 <h3>History Interactions</h3>
 <p>Left Mouse Button/Pen <strong>Click</strong>: Set color to foreground</p>
 <p><strong>Ctrl</strong> + Left Mouse Button/Pen <strong>Click</strong>: Set color to background</p>
